this version allows for basic targeted modeling, inclusively reading a data file, transforming data, and validation of the som-based model; NO persistence so far (saving/loading the model to/from a file)

--- a/NooLabSomFluid/src/org/NooLab/somfluid/description
+++ b/NooLabSomFluid/src/org/NooLab/somfluid/description
@@ -6,6 +6,11 @@ SomFluid contains to very different SOM-engines:
 - the probabilistic SOM (prespecific storage), and 
 - the deterministic SOM (modeling/classification)
 
+small, but important note:
+SomFluid is not concerned with any administrative task, and it also does not
+organize issues around the application of models (or their general life cycle), 
+all of which is done by package NooLabSomOrganizer
+
 
 Environmental Organization
 ---------------------------
