--- a/NooLabSomFluid/.classpath
+++ b/NooLabSomFluid/.classpath
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="/NooLabUtilities"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="testbeds"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="src" path="/NooLabParticleField"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/flanaganScientificLib/flanagan.jar"/>
+	<classpathentry kind="src" path="/apache-math-kmeans"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glue/NooLabGlue.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glue/NooLabCompare.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/repulsionField/javaGeom-0.10.1.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glue/core.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/flanaganScientificLib/flanagan.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/apache/commons-math-2.2/commons-math-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/ML/Mahout/mahout-distribution-0.6/mahout-core-0.6.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/ML/Mahout/mahout-distribution-0.6/mahout-integration-0.6.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/ML/Mahout/mahout-distribution-0.6/mahout-math-0.6.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/jsc/jsc.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/jmath/jmatharray.jar"/>
-	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/expressions/jep241/ext-1.1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/expressions/jep241/jep-2.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glue/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glueX/lib/commons-lang3-3.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NooLabUtilities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JMathTools"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NooLabParticleField"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/repulsionField/NooLabParticleField.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
