--- a/NooLabSomFluid/.classpath
+++ b/NooLabSomFluid/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tester"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NooLabChord"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NooLabUtilities"/>
 	<classpathentry kind="src" path="/NooLabParticleField"/>
 	<classpathentry kind="src" path="/JMathTools"/>
