--- a/NooLabSomFluid/.classpath
+++ b/NooLabSomFluid/.classpath
@@ -19,5 +19,8 @@
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/math/expressions/jep241/ext-1.1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/processing/core.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/datetime/joda-time-2.1/joda-time-2.1.jar"/>
+	<classpathentry kind="src" path="/NooLabiTexxStorage"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/database/iciql/iciql-1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/database/h2/bin/h2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
