--- a/NooLabSomFluid/.classpath
+++ b/NooLabSomFluid/.classpath
@@ -18,12 +18,16 @@
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabCompare.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabMathCommonsAdapt.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabiTexxCommBox.jar"/>
-	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabiTexxStorage.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabiTexxStructures.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glue/NooLabGlue.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/NooLabParticleField.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/xercesImpl-2.9.1.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/JMathTools.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/NooLabUtilities"/>
+	<classpathentry kind="src" path="/NooLabiTexxStructures"/>
+	<classpathentry kind="src" path="/NooLabiTexx"/>
+	<classpathentry kind="src" path="/NooLabiTexxCommBox"/>
+	<classpathentry kind="src" path="/NooLabiTexxStorage"/>
+	<classpathentry kind="src" path="/NooLabSomFluidStructures"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
