--- a/NooLabSomFluidStructures/.classpath
+++ b/NooLabSomFluidStructures/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabUtilities.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/NooLabUtilities"/>
-	<classpathentry kind="lib" path="D:/data/iTexx/bin/NooLabSomFluid.jar"/>
+	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
