--- a/NooLabGraph/.classpath
+++ b/NooLabGraph/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/apacheTools/logging/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/geo/openjgraph/openjgraph-0.9.0/openjgraph/lib/xerces.jar"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/apacheTools/xml/xercesImpl-2.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
