--- a/NooLabSomFluid/.classpath
+++ b/NooLabSomFluid/.classpath
@@ -18,13 +18,14 @@
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabCompare.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabMathCommonsAdapt.jar"/>
 	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/org.NooLab/glue/NooLabGlue.jar"/>
-	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabUtilities.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NooLabUtilities"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NooLabParticleField"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabiTexxStructures.jar"/>
-	<classpathentry kind="lib" path="D:/data/iTexx/bin/NooLabParticleField.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/xercesImpl-2.9.1.jar"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/JMathTools.jar"/>
 	<classpathentry kind="src" path="/NooLabiTexxStorage"/>
 	<classpathentry kind="lib" path="D:/data/iTexx/bin/lib/NooLabiTexxCommBox.jar"/>
 	<classpathentry kind="src" path="/NooLabSomFluidStructures"/>
+	<classpathentry kind="lib" path="C:/Programs/dev/eclipse/xlibs/apacheTools/commons-dbutils/commons-dbutils-1.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
